--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "version": "0.1.0",
   "name": "@mnds/samless",
   "type": "module",
   "private": true,
@@ -22,6 +23,7 @@
     "typescript": "^5"
   },
   "dependencies": {
+    "@types/ink": "^2.0.3",
     "@types/react": "^19.1.1",
     "ink": "^5.2.0",
     "react": "18",
