--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "format": ["esm"],
     "bundle": true,
     "platform": "node",
-    "target": "esnext"
+    "target": "esnext",
+    "ignore": ["src/*.log"]
   },
   "devDependencies": {
     "@types/bun": "latest",
@@ -30,6 +31,7 @@
     "@types/pino": "^7.0.5",
     "@types/react": "^19.1.1",
     "ink": "^5.2.0",
+    "ink-text-input": "^6.0.0",
     "pino": "^9.6.0",
     "react": "18",
     "react-devtools-core": "^6.1.1"
