--- a/package.json
+++ b/package.json
@@ -30,21 +30,20 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/ink": "^0.5.2",
     "@types/node": "^22.14.1",
+    "@types/pino": "^7.0.4",
+    "@types/react": "^19.1.1",
     "tsup": "^8.4.0"
   },
   "peerDependencies": {
     "typescript": "^5"
   },
   "dependencies": {
-    "@types/ink": "^2.0.3",
-    "@types/pino": "^7.0.5",
-    "@types/react": "^19.1.1",
     "ink": "^5.2.0",
     "ink-text-input": "^6.0.0",
     "pino": "^9.6.0",
-    "react": "18",
-    "react-devtools-core": "^6.1.1"
+    "react": "18"
   },
   "files": [
     "dist",
