--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "samless": "./samless.js"
   },
   "scripts": {
-    "build": "tsup",
+    "clear": "rimraf dist",
+    "build": "bun run clear && tsup",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build"
   },
@@ -34,6 +35,7 @@
     "@types/node": "^22.14.1",
     "@types/pino": "^7.0.4",
     "@types/react": "^19.1.1",
+    "rimraf": "^6.0.1",
     "tsup": "^8.4.0"
   },
   "peerDependencies": {
