--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "clear": "rimraf dist",
-    "build": "bun run clear && tsup",
+    "build": "bun run clear && tsup --minify",
     "start": "node dist/index.js",
     "prepublishOnly": "npm run build"
   },
