--- a/package.json
+++ b/package.json
@@ -1,5 +1,15 @@
 {
   "version": "0.8.0",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jrmmendes/samless.git"
+  },
+  "keywords":[
+    "aws",
+    "sam",
+    "serverless",
+    "cli"
+  ],
   "name": "@jrmmendes/samless",
   "type": "module",
   "author": "jrmmendes <jrmmendes@outlook.com>",
@@ -31,14 +41,12 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
-    "@types/ink": "^0.5.2",
+    "@types/ink": "^2.0.3",
     "@types/node": "^22.14.1",
     "@types/pino": "^7.0.4",
     "@types/react": "^19.1.1",
     "rimraf": "^6.0.1",
-    "tsup": "^8.4.0"
-  },
-  "peerDependencies": {
+    "tsup": "^8.4.0",
     "typescript": "^5"
   },
   "dependencies": {
