--- a/package.json
+++ b/package.json
@@ -42,9 +42,11 @@
   "devDependencies": {
     "@types/bun": "latest",
     "@types/ink": "^2.0.3",
+    "@types/ink-testing-library": "^1.0.4",
     "@types/node": "^22.14.1",
     "@types/pino": "^7.0.4",
     "@types/react": "^19.1.1",
+    "ink-testing-library": "^4.0.0",
     "rimraf": "^6.0.1",
     "tsup": "^8.4.0",
     "typescript": "^5"
