--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
   },
   "scripts": {
     "clear": "rimraf dist",
-    "build": "bun run clear && tsup --minify",
-    "start": "node dist/entrypoint.js",
+    "build": "bun run clear && bun build src/entrypoint.ts --outfile=./dist/bundle.js --target=node --minify",
+    "start:node": "node samless.js",
+    "start:dev": "bun src/entrypoint.ts --watch",
     "prepublishOnly": "npm run build"
   },
   "tsup": {
@@ -48,7 +49,6 @@
     "@types/react": "^19.1.1",
     "ink-testing-library": "^4.0.0",
     "rimraf": "^6.0.1",
-    "tsup": "^8.4.0",
     "typescript": "^5"
   },
   "dependencies": {
