--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "scripts": {
     "clear": "rimraf dist",
+    "test": "FORCE_COLOR=0 bun test",
     "build": "bun run clear && bun build src/entrypoint.ts --outfile=./dist/bundle.js --target=node --minify",
     "start:node": "node samless.js",
     "start:dev": "bun src/entrypoint.ts --watch",
