--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
     // Some stricter flags (disabled by default)
     "noUnusedLocals": false,
     "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
+    "noPropertyAccessFromIndexSignature": false,
+
+    // path aliases
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   }
 }
