chore: add test script with coverage

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "clear": "rimraf dist",
     "test": "FORCE_COLOR=0 bun test",
+    "test:cov": "FORCE_COLOR=0 bun test --coverage",
     "build": "bun run clear && bun build src/entrypoint.ts --outfile=./dist/bundle.js --target=node --minify",
     "exec": "node ./samless.js",
     "exec:dev": "bun ./src/entrypoint.ts",
