--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "scripts": {
     "clear": "rimraf dist",
     "test": "FORCE_COLOR=0 bun test",
-    "test:cov": "FORCE_COLOR=0 bun test --coverage",
+    "test:html": "bun run test && bun run g:lcov-html",
+    "test:html:open": "bun run test:html && xdg-open ./coverage/html/index.html",
     "build": "bun run clear && bun build src/entrypoint.ts --outfile=./dist/bundle.js --target=node --minify",
     "exec": "node ./samless.js",
     "exec:dev": "bun ./src/entrypoint.ts",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "g:lcov-html": "genhtml coverage/lcov.info -o ./coverage/html -c ./coverage/style.css"
   },
   "devDependencies": {
     "@types/bun": "latest",
