build: remove pino logger to prevent thread-stream failure from bundle

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "clear": "rimraf dist",
-    "test": "FORCE_COLOR=0 bun test",
+    "test": "FORCE_COLOR=0 NODE_ENV=test bun test",
     "test:html": "bun run test && bun run g:lcov-html",
     "test:html:open": "bun run test:html && xdg-open ./coverage/html/index.html",
     "build": "bun run clear && bun build src/entrypoint.ts --outfile=./dist/bundle.js --target=node --format=esm --minify",
@@ -34,7 +34,6 @@
     "@types/ink": "^2.0.3",
     "@types/ink-testing-library": "^1.0.4",
     "@types/node": "^22.14.1",
-    "@types/pino": "^7.0.4",
     "@types/react": "^19.1.1",
     "ink-testing-library": "^4.0.0",
     "rimraf": "^6.0.1",
@@ -44,7 +43,6 @@
     "commander": "^13.1.0",
     "ink": "^5.2.0",
     "ink-text-input": "^6.0.0",
-    "pino": "^9.6.0",
     "react": "18"
   },
   "files": [
